fix: update alignment of stats grid.

--- a/AQI/style.css
+++ b/AQI/style.css
@@ -282,7 +282,7 @@ transform: scaleX(1);
 
 .stats-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    grid-template-columns: repeat(4, minmax(160px, 1fr));
     gap: 20px;
     margin-bottom: 30px;
 }
